# Langgraph_demo

./: .gitignore  0001-files_processor-all-done.patch  0002-latest-update.patch  chat_summary.md  langgraph_test.py  pyproject.toml
Chat_summarizer/: audio_processor.py  audio_processor_google_oauth.py  chat_summary.py  image_processor.py  video_processor.py
Data_Agent/: graph.py  tool_node.py
Part 1.LangGraph智能体开发入门/脚本文件/chatbot/: graph.py  langgraph.json
Part 1.LangGraph智能体开发入门/课件&代码/: 1.LangGraph快速入门.ipynb  2.LangGraph智能体开发与部署上线流程.ipynb  3.【选学】LangGraph底层API入门.ipynb
Part 2.LangGraph+MCP智能体开发/langgraph_multi_mcp项目源码/: app.py  config.json  mcp_server_time.py  requirements.txt  utils.py
Part 3.LangGraph DeepResearh项目实战/参考资料/: Ch.15 热门AI应用开发实战一：借助谷歌搜索实时更新知识库.ipynb
agent_tool_examples/: LangGraph模型调用方法对比.py  README.md  advanced_format_and_langgraph.py  agent_tool_usage_examples.py  chat_formats.py  chat_window_control.py  deepseek_model_test.py  langchain_model_calls.py  thread_management.py
